@@ -2,6 +2,7 @@ VDR Plugin 'amlhddevice' Revision History
 -----------------------------------------
 
 - fixed:
+  - replay and fast trick speeds
   - A/V sync
 
 2015-08-23: Version 0.0.1
